Closed
Bug 84123
Opened 24 years ago
Closed 22 years ago
Image information is shown on title bar only after image is completely loaded
Categories
(SeaMonkey :: UI Design, defect)
SeaMonkey
UI Design
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.7alpha
People
(Reporter: doctor__j, Assigned: Biesinger)
Details
Attachments
(1 file)
|
936 bytes,
patch
|
janv
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; rv:0.9+) Gecko/20010604
BuildID: 2001060420
It would be more convenient if the image information is shown on the title bar
once the image is being loaded, instead of after the image (especially the large
ones) is completely loaded. That would speed up the guessing work of image size
(useful for slow connections like modem...)
Reproducible: Always
Steps to Reproduce:
1. Open a browser window.
2. Load some images, preferrably large ones.
Actual Results: Image information is shown on title bar only after image is
100% loaded.
Expected Results: Image information is shown on title bar once sufficient bits
of the image is loaded.
Comment 1•24 years ago
|
||
-->Apps
Assignee: asa → pchen
Component: Browser-General → XP Apps
QA Contact: doronr → sairuh
Comment 2•24 years ago
|
||
not sure if this is imagelib, but over to terri who tests image stuff.
terri/pavlov, would this be an imagelib issue, or xp apps?
QA Contact: sairuh → tpreston
Comment 4•24 years ago
|
||
-> default assignee
Assignee: pchen → trudelle
QA Contact: tpreston → sairuh
Target Milestone: Future → ---
Updated•24 years ago
|
Target Milestone: --- → Future
Comment 5•23 years ago
|
||
Also related to this same behaviour:
when an image is loading in the browser (url=image), CTRL-S, File->Save As,
right click Save Image As will only popup the save as dialog _after_ the image
has finished loading.
Might be related to #133732 also (?)
And also it might be related to the bug that allows multiple downloads of the
same filename, because files are saved to a temp dir and only ater download has
finished, they are moved to the proper location. Don't remember the bug # though.
Comment 6•23 years ago
|
||
Comment #5 save as only after image loads, possibly related to bug #58777
| Assignee | ||
Comment 7•23 years ago
|
||
-> Image: Layout
content/html/document/src line 488ff:
nsresult
nsImageDocument::EndLayout(nsISupports *ctxt,
nsresult status)
{
// Layout has completed: now update the title
UpdateTitle();
return NS_OK;
}
so, the title does not get set until after layout is finished, which I suppose
is when the image is loaded.
Assignee: trudelle → sgehani
QA Contact: sairuh → paw
Comment 8•22 years ago
|
||
I wonder how does this go along with auto image resizing...
Comment 9•22 years ago
|
||
Biesi: That code has disappeared from the tree, and there is some function now
called UpdateTitleAndCharset();
I don't have a latest version of Mozilla. Can someone with the most recent build
please check to see if this is fixed?
Kalin: Related, but not a dependency
| Assignee | ||
Comment 10•22 years ago
|
||
not fixed in a current build
the UpdateTitleAndCharset call is now in nsImageDocument::OnStopRequest
http://lxr.mozilla.org/seamonkey/source/content/html/document/src/nsImageDocument.cpp#171
| Assignee | ||
Comment 12•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #140864 -
Flags: superreview?(bzbarsky)
Attachment #140864 -
Flags: review?(varga)
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
OS: Windows 98 → All
Hardware: PC → All
Target Milestone: Future → mozilla1.7alpha
Comment 13•22 years ago
|
||
Do you still need the call in OnStopRequest?
Comment 14•22 years ago
|
||
Comment on attachment 140864 [details] [diff] [review]
patch
looks good, but as bz pointed out, check if it works correctly w/o the call in
OnStopRequest
Attachment #140864 -
Flags: review?(varga) → review+
Comment 15•22 years ago
|
||
Comment on attachment 140864 [details] [diff] [review]
patch
sr=bzbarsky; biesi pointed out that broken images happen.
Attachment #140864 -
Flags: superreview?(bzbarsky) → superreview+
| Assignee | ||
Comment 16•22 years ago
|
||
thanks for the fast reviews
Checking in nsImageDocument.cpp;
/cvsroot/mozilla/content/html/document/src/nsImageDocument.cpp,v <--
nsImageDocument.cpp
new revision: 1.116; previous revision: 1.115
done
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Core → Mozilla Application Suite
You need to log in
before you can comment on or make changes to this bug.
Description
•