Bug 84123 Image information is shown on title bar only after image is completely loaded

call UpdateTitleAndCharset in OnStartContainer, that's the earliest time at
which we have the image dimensions.
r=varga sr=bzbarsky